--- a/media.html
+++ b/media.html
@@ -298,8 +298,7 @@
                 <!-- Awaz The Voice -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
-                        <img src="https://www.awazthevoice.in/upload/news/176502202106_2025_3164031_46.webp"
-                            alt="Rajeev Bhatt Neurodiversity Revolution">
+                        <img src="img/1.webp" alt="Rajeev Bhatt Neurodiversity Revolution">
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">Rajeev Bhatt Drives Neurodiversity Revolution in India</h3>
                             <p class="news-cards-excerpt line-clamp-3">
@@ -317,8 +316,7 @@
                 <!-- Sangri Times -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEidu6y-J27L50fJFeQD4iAtVZbTrgD_bLKqJbDG4B-ODLu805vbDcM7UGOmn76WscJQkIxDBcVnjgCWU2_1_MtOI8vNlRtoOG3gRMUlN-nRUCftO7shxJQlgwFwcVpxhhO40Y7Lh5R1LtjLV72y5yqWG6mCzAvm87QnfnozsuYenAQaIsTwdMIg3DTGCa_i/w1600/Rajeev%20Bhatt.jpg"
-                            alt="Rajeev Bhatt Inclusion Architect">
+                        <img src="img/1.jpeg" alt="Rajeev Bhatt Inclusion Architect">
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">The Architect of India’s Neurodiversity & Inclusion Revolution
                             </h3>
@@ -335,8 +333,7 @@
                 <!-- The CEO -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
-                        <img src="https://media.assettype.com/theceo%2F2025-12-08%2F9fnsvcs0%2FPR-2.png?w=640"
-                            alt="Rajeev Bhatt The CEO">
+                        <img src="img/1.webp" alt="Rajeev Bhatt The CEO">
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">Rajeev Bhatt: Championing Neurodiversity in India</h3>
                             <p class="news-cards-excerpt line-clamp-3">
@@ -352,8 +349,7 @@
                 <!-- Tribune India -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
-                        <img src="https://www.tribuneindia.com/sortd-service/imaginary/v22-01/jpg/large/high?url=dGhldHJpYnVuZS1zb3J0ZC1wcm8tcHJvZC1zb3J0ZC9tZWRpYWU3NzgyY2MwLWQyOTgtMTFmMC1hNWYzLWU1NWZlMzk3YzBhZi5qcGc="
-                            alt="Rajeev Bhatt Tribune India">
+                        <img src="img/1.webp" alt="Rajeev Bhatt Tribune India">
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">A Quiet Revolution in Neurodiversity</h3>
                             <p class="news-cards-excerpt line-clamp-3">
@@ -369,8 +365,7 @@
                 <!-- PTI News -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
-                        <img src="https://www.awazthevoice.in/upload/news/176502202106_2025_3164031_46.webp"
-                            alt="Rajeev Bhatt PTI News">
+                        <img src="img/1.webp" alt="Rajeev Bhatt PTI News">
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">National Recognition for Neurodiversity Leadership</h3>
                             <p class="news-cards-excerpt line-clamp-3">
@@ -382,27 +377,55 @@
                         </div>
                     </div>
                 </div>
-                <!-- News18 Hindi – Divya Kala Mela -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
-                        <img src="https://images.news18.com/ibnkhabar/uploads/2025/12/IMG-20251215-WA0017-2025-12-496c7f571895ef254a6fd91b99506f42-4x3.jpg?impolicy=website&width=640&height=480"
-                            alt="दिव्य कला मेला समावेशन सशक्तिकरण">
+                        <img src="img/1.webp" alt="Rajeev Bhatt Tribune India">
                         <div class="news-cards-content">
-                            <h3 class="news-cards-title">
-                                दिव्य कला मेला: क्षमता, समावेशन और सामुदायिक सशक्तिकरण का जश्न
-                            </h3>
+                            <h3 class="news-cards-title">A Quiet Revolution in Neurodiversity</h3>
                             <p class="news-cards-excerpt line-clamp-3">
-                                भारत सरकार के सामाजिक न्याय और अधिकारिता मंत्रालय द्वारा आयोजित दिव्य कला मेला,
-                                दिव्यांगजन कलाकारों और उद्यमियों को आत्मनिर्भरता और समावेशन का मंच प्रदान करता है।
+                                A standing ovation marked a national recognition of Rajeev Bhatt’s unwavering
+                                dedication to inclusion and learning differences.
                             </p>
-                            <a href="https://hindi.news18.com/news/delhi/south-delhi-divya-kala-mela-ability-inclusion-community-empowerment-9968064.html"
-                                target="_blank" class="news-cards-link">और पढ़ें →</a>
-                        </div>
+                            <a href=" <div class=" col-12 col-md-6 col-lg-4">
+                                <div class="news-cards">
+                                    <img src="img/1.webp" alt="Rajeev Bhatt Tribune India">
+                                    <div class="news-cards-content">
+                                        <h3 class="news-cards-title">Rajeev Bhatt Conferred National Award 2025 for
+                                            Empowerment of Persons with Disabilities</h3>
+                                        <p class="news-cards-excerpt line-clamp-3">
+                                            Renowned inclusion expert and educationist Rajeev Bhatt has been conferred
+                                            the National Award 2025 for Divyangjano Ke Sashktikaran Ke Liye Karyarat
+                                            Sarvshreshta Vyakti.
+                                        </p>
+                                        <a href="https://www.tribuneindia.com/news/business/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution/amp"
+                                            target="_blank" class="news-cards-link">Read More →</a>
+                                    </div>
+                                </div>
+                        </div>"
+                        target="_blank" class="news-cards-link">Read More →</a>
                     </div>
                 </div>
-
             </div>
+            <!-- News18 Hindi – Divya Kala Mela -->
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="news-cards">
+                    <img src="img/7.webp" alt="दिव्य कला मेला समावेशन सशक्तिकरण">
+                    <div class="news-cards-content">
+                        <h3 class="news-cards-title">
+                            दिव्य कला मेला: क्षमता, समावेशन और सामुदायिक सशक्तिकरण का जश्न
+                        </h3>
+                        <p class="news-cards-excerpt line-clamp-3">
+                            भारत सरकार के सामाजिक न्याय और अधिकारिता मंत्रालय द्वारा आयोजित दिव्य कला मेला,
+                            दिव्यांगजन कलाकारों और उद्यमियों को आत्मनिर्भरता और समावेशन का मंच प्रदान करता है।
+                        </p>
+                        <a href="https://hindi.news18.com/news/delhi/south-delhi-divya-kala-mela-ability-inclusion-community-empowerment-9968064.html"
+                            target="_blank" class="news-cards-link">और पढ़ें →</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
+    </div>
 
     </div>
 
