--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny - Events That Liberate</title>
+    <title>Rajeev Bhatt
+    </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -209,94 +210,95 @@
 
     <section class="blog-section">
         <div class="container">
-            <div class="row g-5  py-5 align-items-center">
-                <div class="  col-md-5">
-                    <p class="section-subtitle">Blog</p>
-                    <h2 class="section-title">Blogs & News</h2>
+
+            <!-- Section Header -->
+            <div class="row g-5 py-5 align-items-center">
+                <div class="col-md-5">
+                    <h2 class="section-title">Understanding Autism In Detail</h2>
                 </div>
                 <div class="col-md-7">
-                    <p class="">Synergistically seize front-end methods of empowerment without extensive core
-                        competencies.
-                        Progressively repurpose alternative platforms
-
+                    <p>
+                        Explore insightful articles focused on autism awareness, inclusive education,
+                        and practical guidance for parents and educators shaping a more understanding society.
                     </p>
                 </div>
             </div>
 
+            <!-- Blog Cards -->
             <div class="row g-4">
+
+                <!-- Card 1 -->
                 <div class="col-md-4">
                     <div class="blog-card">
                         <div class="card-img">
-                            <img src="img/post_02-640x640.jpg" alt="" class="img-fuild">
-
+                            <img src="img/6.jpeg" alt="" class="img-fluid">
                         </div>
-                        <a href="#contact" class="cta-btn">
+
+                        <a href="practical-strategies-for-parents-from-rajeev-practical-strategies-for-parents-from-rajeev-bhatt.html"
+                            class="cta-btn">
                             <span>↗</span>
                         </a>
+
                         <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_11-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_12-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
+                            <span class="card-date">February 2024</span>
+                            <h5>Practical Strategies for Parents</h5>
+                            <p>
+                                Expert-backed strategies by Rajeev Bhatt offering parents clear,
+                                compassionate guidance to support children with autism and learning differences.
                             </p>
                         </div>
                     </div>
                 </div>
 
+                <!-- Card 2 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/1.webp" alt="" class="img-fluid">
+                        </div>
+
+                        <a href="educating-india-rajeev-bhatt-on-neurodiversity-and-inclusion.html" class="cta-btn">
+                            <span>↗</span>
+                        </a>
+
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Educating India on Neurodiversity</h5>
+                            <p>
+                                An in-depth look at how awareness, inclusion, and research are reshaping
+                                India’s understanding of neurodiverse education.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/5.jpeg" alt="" class="img-fluid">
+                        </div>
+
+                        <a href="how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html" class="cta-btn">
+                            <span>↗</span>
+                        </a>
+
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Transforming Inclusive Education in India</h5>
+                            <p>
+                                Discover how Rajeev Bhatt is redefining inclusive education and empowering
+                                neurodiverse learners across schools and institutions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
-
         </div>
     </section>
+
     <section class="news-section  bg-white mt-5">
         <div class="row ">
             <div class="col-md-3">
