--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny - Events That Liberate</title>
+    <title>Rajeev Bhatt
+    </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,6 +17,17 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: var(--font-family-primary);
+            font-size: var(--font-size-base);
+            background-color: var(--color-dark);
+            color: var(--color-light);
+            line-height: 1.6;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+    </style>
 </head>
 
 <body>
@@ -69,80 +81,56 @@
     </div>
 
 
-    <section class="section bg-white">
-        <div class="container">
-            <div class="row align-items-start">
+    <section class="contact-us">
+        <div class="header">
+            <h1>Contact Our Team</h1>
+            <p>Reach out through our contact form or connect with us via any of these methods</p>
+        </div>
 
-                <!-- LEFT: Heading + Contact Info + Social -->
-                <div class="col-md-6">
-                    <div class="contact-left">
-
-                        <h2>We are always ready to help you and answer your questions</h2>
-                        <p>
-                            Pacific hake false trivally queen parrotfish black pricklyback mosshead warbonnet sweeper!
-                            Greening sleeper.
-                        </p>
-
-                        <div class="contact-grid">
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-telephone-fill"></i> Call Center</h5>
-                                <p>800 100 975 20 34</p>
-                                <p>(+123) 1800-234-5678</p>
-                            </div>
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-geo-alt-fill"></i> Our Location</h5>
-                                <p>USA, New York - 1063</p>
-                                <p>Str. First Avenue 1</p>
-                            </div>
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-envelope-fill"></i> Email</h5>
-                                <p>neuros@mail.co</p>
-                            </div>
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-share-fill"></i> Social Network</h5>
-                                <div class="social-links">
-                                    <a href="#"><i class="bi bi-facebook"></i></a>
-                                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                                    <a href="#"><i class="bi bi-linkedin"></i></a>
-                                    <a href="#"><i class="bi bi-youtube"></i></a>
-                                </div>
-                            </div>
-
-                        </div>
-
+        <div class="main-wrapper">
+            <div class="form-box">
+                <h2>Send us a Message</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="contact-name">Full Name</label>
+                        <input type="text" id="contact-name" placeholder="Your name">
                     </div>
-                </div>
-
-
-                <!-- RIGHT: Contact Form -->
-                <div class="col-md-6">
-                    <div class="contact-form">
-                        <div class="form-header">
-                            <h2>Got ideas? We've got the skills. Let's team up.</h2>
-                            <p>Tell us more about yourself and what you're got in mind.</p>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" placeholder="Your name" />
-                        </div>
-
-                        <div class="form-group">
-                            <input type="email" placeholder="you@company.com" />
-                        </div>
-
-                        <div class="form-group">
-                            <textarea placeholder="Tell us a little about the project..."></textarea>
-                        </div>
-
-                        <button class="submit-btn">Let's get started!</button>
+                    <div class="form-group">
+                        <label for="contact-email">Email Address</label>
+                        <input type="email" id="contact-email" placeholder="Your email">
                     </div>
-                </div>
-
+                    <div class="form-group">
+                        <label for="contact-msg">Message</label>
+                        <textarea id="contact-msg" placeholder="Your message..."></textarea>
+                    </div>
+                    <button class="submit-btn" type="submit">Submit</button>
+                </form>
             </div>
+
+            <div class="info-grid">
+                <div class="info-box">
+                    <i class="bi bi-envelope-open"></i>
+                    <h4>Email</h4>
+                    <p><a href="mailto:drrajeevbhattyt@gmail.com">drrajeevbhattyt@gmail.com</a></p>
+                </div>
+                <div class="info-box">
+                    <i class="bi bi-telephone-outbound"></i>
+                    <h4>Phone</h4>
+                    <p><a href="tel:+919810052388">+91 98100 52388</a></p>
+                    <p><a href="tel:+918860900253">+91 88609 00253</a></p>
+                </div>
+                <div class="info-box">
+                    <i class="bi bi-pin-map"></i>
+                    <h4>Location</h4>
+                    <p>E-17, 2nd Floor, South Extension Part 1, New Delhi, Delhi 110017</p>
+                </div>
+                <div class="info-box">
+                    <i class="bi bi-chat-left-dots"></i>
+                    <h4>Live Chat</h4>
+                    <p>Available 24/7</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
