--- a/media.html
+++ b/media.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenny - Events That Liberate</title>
+    <title>Rajeev Bhatt
+    </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -294,7 +295,6 @@
     <div class="news-cards-section section">
         <div class="container">
             <div class="row g-4">
-
                 <!-- Awaz The Voice -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
@@ -303,9 +303,7 @@
                             <h3 class="news-cards-title">Rajeev Bhatt Drives Neurodiversity Revolution in India</h3>
                             <p class="news-cards-excerpt line-clamp-3">
                                 On 3 December 2025, Rajeev Bhatt received the National Award for Empowerment of Persons
-                                with
-                                Disabilities,
-                                marking a defining moment in India’s neurodiversity movement.
+                                with Disabilities, marking a defining moment in India’s neurodiversity movement.
                             </p>
                             <a href="https://www.awazthevoice.in/business-news/rajeev-bhatt-drives-neurodiversity-revolution-in-india-44927.html"
                                 target="_blank" class="news-cards-link">Read More →</a>
@@ -321,8 +319,8 @@
                             <h3 class="news-cards-title">The Architect of India’s Neurodiversity & Inclusion Revolution
                             </h3>
                             <p class="news-cards-excerpt line-clamp-3">
-                                Rajeev Bhatt’s three decades of work have reshaped how India understands, supports,
-                                and empowers individuals with learning differences.
+                                Rajeev Bhatt’s three decades of work have reshaped how India understands, supports, and
+                                empowers individuals with learning differences.
                             </p>
                             <a href="https://en.sangritimes.com/spotlight/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution"
                                 target="_blank" class="news-cards-link">Read More →</a>
@@ -353,8 +351,8 @@
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">A Quiet Revolution in Neurodiversity</h3>
                             <p class="news-cards-excerpt line-clamp-3">
-                                A standing ovation marked a national recognition of Rajeev Bhatt’s unwavering
-                                dedication to inclusion and learning differences.
+                                A standing ovation marked a national recognition of Rajeev Bhatt’s unwavering dedication
+                                to inclusion and learning differences.
                             </p>
                             <a href="https://www.tribuneindia.com/news/business/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution/amp"
                                 target="_blank" class="news-cards-link">Read More →</a>
@@ -369,64 +367,52 @@
                         <div class="news-cards-content">
                             <h3 class="news-cards-title">National Recognition for Neurodiversity Leadership</h3>
                             <p class="news-cards-excerpt line-clamp-3">
-                                PTI highlights Rajeev Bhatt’s national award and his pioneering role
-                                in shaping India’s neurodiversity framework.
+                                PTI highlights Rajeev Bhatt’s national award and his pioneering role in shaping India’s
+                                neurodiversity framework.
                             </p>
                             <a href="https://www.ptinews.com/press-release/rajeev-bhatt-the-architect-of-india%E2%80%99s-neurodiversity-and-inclusion-revolution/3164031"
                                 target="_blank" class="news-cards-link">Read More →</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Tribune India (duplicate article fixed) -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="news-cards">
                         <img src="img/1.webp" alt="Rajeev Bhatt Tribune India">
                         <div class="news-cards-content">
-                            <h3 class="news-cards-title">A Quiet Revolution in Neurodiversity</h3>
+                            <h3 class="news-cards-title">Rajeev Bhatt Conferred National Award 2025 for Empowerment of
+                                Persons with Disabilities</h3>
                             <p class="news-cards-excerpt line-clamp-3">
-                                A standing ovation marked a national recognition of Rajeev Bhatt’s unwavering
-                                dedication to inclusion and learning differences.
+                                Renowned inclusion expert and educationist Rajeev Bhatt has been conferred the National
+                                Award 2025 for Divyangjano Ke Sashktikaran Ke Liye Karyarat Sarvshreshta Vyakti.
                             </p>
-                            <a href=" <div class=" col-12 col-md-6 col-lg-4">
-                                <div class="news-cards">
-                                    <img src="img/1.webp" alt="Rajeev Bhatt Tribune India">
-                                    <div class="news-cards-content">
-                                        <h3 class="news-cards-title">Rajeev Bhatt Conferred National Award 2025 for
-                                            Empowerment of Persons with Disabilities</h3>
-                                        <p class="news-cards-excerpt line-clamp-3">
-                                            Renowned inclusion expert and educationist Rajeev Bhatt has been conferred
-                                            the National Award 2025 for Divyangjano Ke Sashktikaran Ke Liye Karyarat
-                                            Sarvshreshta Vyakti.
-                                        </p>
-                                        <a href="https://www.tribuneindia.com/news/business/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution/amp"
-                                            target="_blank" class="news-cards-link">Read More →</a>
-                                    </div>
-                                </div>
-                        </div>"
-                        target="_blank" class="news-cards-link">Read More →</a>
+                            <a href="https://www.tribuneindia.com/news/business/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution/amp"
+                                target="_blank" class="news-cards-link">Read More →</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- News18 Hindi – Divya Kala Mela -->
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="news-cards">
-                    <img src="img/7.webp" alt="दिव्य कला मेला समावेशन सशक्तिकरण">
-                    <div class="news-cards-content">
-                        <h3 class="news-cards-title">
-                            दिव्य कला मेला: क्षमता, समावेशन और सामुदायिक सशक्तिकरण का जश्न
-                        </h3>
-                        <p class="news-cards-excerpt line-clamp-3">
-                            भारत सरकार के सामाजिक न्याय और अधिकारिता मंत्रालय द्वारा आयोजित दिव्य कला मेला,
-                            दिव्यांगजन कलाकारों और उद्यमियों को आत्मनिर्भरता और समावेशन का मंच प्रदान करता है।
-                        </p>
-                        <a href="https://hindi.news18.com/news/delhi/south-delhi-divya-kala-mela-ability-inclusion-community-empowerment-9968064.html"
-                            target="_blank" class="news-cards-link">और पढ़ें →</a>
-                    </div>
-                </div>
-            </div>
 
+                <!-- News18 Hindi – Divya Kala Mela -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="news-cards">
+                        <img src="img/7.webp" alt="दिव्य कला मेला समावेशन सशक्तिकरण">
+                        <div class="news-cards-content">
+                            <h3 class="news-cards-title">
+                                दिव्य कला मेला: क्षमता, समावेशन और सामुदायिक सशक्तिकरण का जश्न
+                            </h3>
+                            <p class="news-cards-excerpt line-clamp-3">
+                                भारत सरकार के सामाजिक न्याय और अधिकारिता मंत्रालय द्वारा आयोजित दिव्य कला मेला,
+                                दिव्यांगजन कलाकारों और उद्यमियों को आत्मनिर्भरता और समावेशन का मंच प्रदान करता है।
+                            </p>
+                            <a href="https://hindi.news18.com/news/delhi/south-delhi-divya-kala-mela-ability-inclusion-community-empowerment-9968064.html"
+                                target="_blank" class="news-cards-link">और पढ़ें →</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div>
-
     </div>
 
 
