--- a/about.html
+++ b/about.html
@@ -557,6 +557,7 @@
             autoplay: {
                 delay: 2000,
                 disableOnInteraction: false,
+                pauseOnMouseEnter: true,
             },
             breakpoints: {
                 320: { slidesPerView: 2 },
@@ -564,9 +565,8 @@
                 1024: { slidesPerView: 5 },
             },
         });
-
-
     </script>
+
 
 </body>
 
