--- a/media.html
+++ b/media.html
@@ -535,6 +535,7 @@
             autoplay: {
                 delay: 2000,
                 disableOnInteraction: false,
+                pauseOnMouseEnter: true,
             },
             breakpoints: {
                 320: { slidesPerView: 2 },
@@ -542,9 +543,8 @@
                 1024: { slidesPerView: 5 },
             },
         });
-
-
     </script>
+
 </body>
 
 </html>
