--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@
             autoplay: {
                 delay: 2000,
                 disableOnInteraction: false,
+                pauseOnMouseEnter: true,
             },
             breakpoints: {
                 320: { slidesPerView: 2 },
@@ -660,9 +661,8 @@
                 1024: { slidesPerView: 5 },
             },
         });
-
-
     </script>
+
 
 </body>
 
