--- a/gallery.html
+++ b/gallery.html
@@ -4,15 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rajeev Bhatt
-    </title>
+    <title>Rajeev Bhatt</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -59,158 +55,25 @@
         </div>
     </div>
 
+    <!-- Breadcrumb Section -->
     <div class="p-4 pt-0">
-        <div class="breadcrumb-section position-relative overflow-hidden rounded-4 ">
+        <div class="breadcrumb-section position-relative overflow-hidden rounded-4">
             <img src="img/post_12-640x640.jpg" class="w-100 h-100 object-fit-cover" alt="Contacts Banner">
-
             <div
                 class="breadcrumb-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center text-white">
-                <h1 class="fw-bold display-5 text-uppercase">Media</h1>
-            </div>
-
-            <div
-                class="breadcrumb-nav position-absolute bottom-0 start-0 m-4 bg-white px-3 py-2 rounded-pill shadow-sm">
-                <a href="index.html" class="text-decoration-none text-dark">Home</a>
-                <span class="text-muted"> / Media</span>
+                <h1 class="fw-bold display-5 text-uppercase">Gallery</h1>
             </div>
         </div>
     </div>
 
-
-
-
-    <section class="blog-section">
+    <!-- Gallery Section -->
+    <section class="gallery-section py-5">
         <div class="container">
-
-            <!-- Section Header -->
-            <div class="row g-5 py-5 align-items-center">
-                <div class="col-md-5">
-                    <h2 class="section-title">Understanding Autism In Detail</h2>
-                </div>
-                <div class="col-md-7">
-                    <p>
-                        Explore insightful articles on autism awareness, inclusive education,
-                        and practical guidance for parents, educators, and caregivers.
-                    </p>
-                </div>
+            <div class="row gallery-grid" id="gallery-grid">
+                <!-- Gallery Images will be injected here by JavaScript -->
             </div>
-
-            <!-- Blog Cards -->
-            <div class="row g-4">
-
-                <!-- Card 1 -->
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/6.jpeg" alt="" class="img-fluid">
-                        </div>
-                        <a href="practical-strategies-for-parents-from-rajeev-practical-strategies-for-parents-from-rajeev-bhatt.html"
-                            class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 2024</span>
-                            <h5>Practical Strategies for Parents</h5>
-                            <p>
-                                Expert insights by Rajeev Bhatt to help parents confidently support
-                                children with autism and learning differences.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 2 -->
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/1.webp" alt="" class="img-fluid">
-                        </div>
-                        <a href="educating-india-rajeev-bhatt-on-neurodiversity-and-inclusion.html" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 2024</span>
-                            <h5>Educating India on Neurodiversity</h5>
-                            <p>
-                                How awareness, inclusion, and research are changing India’s approach
-                                toward neurodiverse education.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 3 -->
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/5.jpeg" alt="" class="img-fluid">
-                        </div>
-                        <a href="how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 2024</span>
-                            <h5>Transforming Inclusive Education in India</h5>
-                            <p>
-                                Discover how inclusive learning models are empowering neurodiverse
-                                students across schools and institutions.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 4 -->
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/1.jpeg" alt="" class="img-fluid">
-                        </div>
-                        <a href="how-rajeev-bhatt-changed-indias-approach-to-learning-disabilities.html"
-                            class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">March 2024</span>
-                            <h5>Changing India’s Approach to Learning Disabilities</h5>
-                            <p>
-                                A deep dive into how mindset shifts and policy changes are improving
-                                support for learners with disabilities.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 5 -->
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/1.webp" alt="" class="img-fluid">
-                        </div>
-                        <a href="rajeev-bhatt-honoured-with-national-award-2025-by-president-of-india.html"
-                            class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">December 2025</span>
-                            <h5>Rajeev Bhatt Honoured with National Award</h5>
-                            <p>
-                                Recognizing a lifetime of dedication toward inclusive education and
-                                empowering persons with disabilities across India.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
         </div>
     </section>
-
-
-
-
-
-
 
     <div class="footer-section">
         <div class="contact-cta ">
@@ -334,14 +197,67 @@
         </footer>
     </div>
 
-
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+    <!-- Custom JS for Gallery -->
+    <script>
+        const images = [
+            'img/1.jpeg',
+            'img/4.jpeg',
+            'img/5.jpeg',
+            'img/6.jpeg',
+            'img/8.jpeg',
+            'img/9.jpeg',
+        ];
 
+        const galleryGrid = document.getElementById('gallery-grid');
+
+        function renderGallery() {
+            images.forEach((imageSrc) => {
+                const colDiv = document.createElement('div');
+                colDiv.classList.add('gallery-item');
+
+                const cardDiv = document.createElement('div');
+                cardDiv.classList.add('gallery-card');
+
+                const img = document.createElement('img');
+                img.src = imageSrc;
+                img.alt = 'Gallery Image';
+                img.classList.add('img-fluid', 'gallery-image');
+
+                cardDiv.appendChild(img);
+                colDiv.appendChild(cardDiv);
+                galleryGrid.appendChild(colDiv);
+            });
+
+            adjustMasonryLayout();
+        }
+
+        function adjustMasonryLayout() {
+            const width = window.innerWidth;
+            let columnCount;
+
+            if (width >= 1200) {
+                columnCount = 4;
+            } else if (width >= 992) {
+                columnCount = 3;
+            } else if (width >= 768) {
+                columnCount = 2;
+            } else {
+                columnCount = 1;
+            }
+
+            galleryGrid.style.gridTemplateColumns = `repeat(${columnCount}, 1fr)`;
+        }
+
+        renderGallery();
+        window.addEventListener('resize', adjustMasonryLayout);
+    </script>
 
 </body>
 
