--- a/about.html
+++ b/about.html
@@ -20,14 +20,17 @@
 
 <body>
 
+
+    <!-- Navbar -->
     <div class="nav-section">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-custom">
                 <div class="container-fluid">
 
                     <a class="navbar-brand" href="#">
-                        <div class="logo-circle">R</div>
-                        Rajeev Bhatt
+                        <!-- <div class="logo-circle">R</div>
+                        Rajeev Bhatt -->
+                        <img src="img/logo/logo1.png" alt="" class="logo">
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -35,13 +38,18 @@
                         <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 
                             <li class="nav-item"><a class="nav-link" href="media.html">News Media
                                 </a></li>
+
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery
+                                </a></li>
+
+
                             <li class="nav-item"><a class="nav-link" href="blog.html">Blog
                                 </a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
@@ -51,6 +59,7 @@
             </nav>
         </div>
     </div>
+
     <div class="p-4 pt-0">
         <div class="breadcrumb-section position-relative overflow-hidden rounded-4 ">
             <img src="img/post_12-640x640.jpg" class="w-100 h-100 object-fit-cover" alt="Contacts Banner">
@@ -335,7 +344,7 @@
 
                 <!-- Mission -->
                 <div class="col-lg-6 col-md-6">
-                    <div class="stat-card white-card">
+                    <div class="stat-card">
                         <div class="h-100 p-4">
                             <div class="d-flex align-items-center">
 
@@ -393,7 +402,7 @@
         <div class="row ">
             <div class="col-md-3">
                 <div class="news-label h-100 d-flex justify-content-center align-items-center">
-                    <h3 class="text-dark">Featured in →</h3>
+                    <h3 class="text-white">Featured in →</h3>
                 </div>
             </div>
             <div class="col-md-9">
@@ -458,10 +467,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-8">
-                        <h2 class="cta-title">Let’s Showcase Your Space the Right Way?</h2>
-                        <p class="cta-phone">Whether you're promoting a factory, a hotel, an office, or a product —
-                            Rajeev Bhatt delivers the visuals your audience will remember.
+                        <h2 class="cta-title">Let’s Create Impact the Right Way</h2>
+                        <p class="cta-phone">With decades of experience in inclusive education and neurodiversity,
+                            Rajeev Bhatt ensures your message reflects clarity, dignity, and purpose.
                         </p>
+
                     </div>
                     <div class="col-md-4 text-md-end text-center mt-3 mt-md-0">
                         <a href="contact.html" class="btn ">
@@ -482,12 +492,17 @@
                         <!-- Logo & Social -->
                         <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                             <div class="footer-logo">
-                                <div class="since-text text-white text-white">Rajeev Bhatt</div>
-
+                                <!-- <div class="since-text text-white text-white">Rajeev Bhatt</div> -->
+                                <img src="img/logo/logo1.png" alt="" class="">
                             </div>
                             <div class="social-links mt-4">
-                                <a target="_blank"
-                                    href="https://www.facebook.com/people/Dr-Rajeev-Bhatt/61576720773805/"
+
+                                <a target="_blank" href="https://www.instagram.com/_dr.rajeevbhatt/" class="social-icon"
+                                    title="instagram" aria-label="instagram">
+                                    <i class="bi bi-instagram"></i>
+                                </a>
+
+                                <a target="_blank" href="https://www.facebook.com/profile.php?id=61576720773805"
                                     class="social-icon" title="Facebook" aria-label="Facebook">
                                     <i class="bi bi-facebook"></i>
                                 </a>
@@ -498,11 +513,16 @@
                                     <i class="bi bi-linkedin"></i>
                                 </a>
 
-                                <a target="_blank" href="https://www.youtube.com/@Dr.RajeevBhatt" class="social-icon"
-                                    title="YouTube" aria-label="YouTube">
+                                <a target="_blank" href="https://youtu.be/B2dEIQLub0A?si=C48tpKTW2CLowzOO"
+                                    class="social-icon" title="YouTube" aria-label="YouTube">
                                     <i class="bi bi-youtube"></i>
                                 </a>
                             </div>
+
+                            Let’s stay connected. <br>
+                            Follow along on social media for thoughtful insights, real conversations, and ongoing work
+                            around inclusion, education, and neurodiversity.
+
 
 
                         </div>
@@ -528,6 +548,7 @@
                                 <a href="about.html" class="footer-link">About</a>
                                 <a href="media.html" class="footer-link">Media</a>
                                 <a href="blog.html" class="footer-link">Blog</a>
+                                <a href="gallery.html" class="footer-link">Gallery</a>
                                 <a href="contact.html" class="footer-link">Contacts</a>
                             </div>
                         </div>
@@ -540,16 +561,25 @@
                 <!-- Footer Bottom -->
                 <div class="footer-bottom">
                     <div class="row align-items-center">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
                             <p class="copyright">©Rajeev Bhatt 2025. All rights reserved.</p>
                         </div>
-                        <div class="col-md-6 text-center text-md-end">
+                        <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                            <a href="https://brandingwaale.com/" class="copyright"
+                                style="text-decoration: none;">Designed
+                                &amp; Developed by Brandingwaale
+                                Webtech</a>
+                        </div>
+                        <div class="col-md-4 text-center text-md-end">
                             <a href="#" class="footer-bottom-link">Terms of use</a>
                             <a href="#" class="footer-bottom-link">Privacy</a>
                             <a href="#" class="footer-bottom-link">Environmental Policy</a>
                         </div>
                     </div>
+
+
                 </div>
+
             </div>
         </footer>
     </div>
