--- a/how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html
+++ b/how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html
@@ -35,7 +35,7 @@
                         <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
