--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                 <div class="container-fluid">
 
                     <a class="navbar-brand" href="#">
-                        <div class="logo-circle">R</div>
-                        Rajeev Bhatt
+                        <!-- <div class="logo-circle">R</div>
+                        Rajeev Bhatt -->
+                        <img src="img/logo/logo1.png" alt="" class="logo">
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -38,13 +39,18 @@
                         <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 
                             <li class="nav-item"><a class="nav-link" href="media.html">News Media
                                 </a></li>
+
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery
+                                </a></li>
+
+
                             <li class="nav-item"><a class="nav-link" href="blog.html">Blog
                                 </a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
@@ -60,9 +66,11 @@
     <div class="hero-scroll">
         <div class="container">
             <div class="contant">
-                <h1>Master every area <br> of your life</h1>
-                <p class="mt-4">Close the gap between where you are and where you want to be <br>with Rajeev Bhatt'
-                    scientifically proven system.</p>
+                <h1>Shaping Minds. <br>Changing Lives. <br>Building an Inclusive Future.
+                </h1>
+                <p class="mt-4">A lifelong mission to support diverse learners through understanding, dignity, and
+                    meaningful inclusion.
+                </p>
             </div>
         </div>
     </div>
@@ -74,29 +82,21 @@
 
                 <!-- Text content -->
                 <div class="col-lg-6">
-                    <h2 class="fw-bold mb-4 text-dark">The start of a bigger story</h2>
-                    <p class="fs-5 mb-4 text-black">Tony didn't come from wealth.</p>
+                    <h2 class="fw-bold mb-4 text-dark">The Torchbearer of Inclusive India</h2>
                     <p class="text-black">
-                        As a child he had four different fathers and an intense mother.
-                        Food was scarce. One Thanksgiving a man knocked on the door holding
-                        bags filled to the brim with groceries — an anonymous gift from
-                        someone who knew his family was struggling.
+                        Rajeev Bhatt is one of India’s most respected pioneers in the field of inclusive education and
+                        learning disabilities. With a journey spanning over three decades, he has dedicated his life to
+                        ensuring that children with autism, dyslexia, ADHD, and other learning differences are not
+                        defined by limitations—but empowered by opportunity.
                     </p>
                     <p class="text-black">
-                        Tony's father at the time was immediately angered and tried to refuse
-                        the gift. But Tony was overjoyed. This was more food than they'd had
-                        in a long time.
+                        Honoured with the National Award for Empowerment of Persons with Disabilities, presented by the
+                        Hon’ble President of India Droupadi Murmu, Rajeev Bhatt’s work represents a transformational
+                        shift in how India understands neurodiversity, education, and dignity.
+
                     </p>
 
-                    <a href="about.html" class="btn btn-black">
-                        <span>About us</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 74 74" height="34" width="34">
-                            <circle stroke-width="3" stroke="black" r="35.5" cy="37" cx="37"></circle>
-                            <path fill="black"
-                                d="M25 35.5C24.1716 35.5 23.5 36.1716 23.5 37C23.5 37.8284 24.1716 38.5 25 38.5V35.5ZM49.0607 38.0607C49.6464 37.4749 49.6464 36.5251 49.0607 35.9393L39.5147 26.3934C38.9289 25.8076 37.9792 25.8076 37.3934 26.3934C36.8076 26.9792 36.8076 27.9289 37.3934 28.5147L45.8787 37L37.3934 45.4853C36.8076 46.0711 36.8076 47.0208 37.3934 47.6066C37.9792 48.1924 38.9289 48.1924 39.5147 47.6066L49.0607 38.0607ZM25 38.5L48 38.5V35.5L25 35.5V38.5Z">
-                            </path>
-                        </svg>
-                    </a>
+
 
                 </div>
 
@@ -110,6 +110,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Events Section -->
     <section class="events-section">
@@ -210,7 +211,7 @@
         <div class="row ">
             <div class="col-md-3">
                 <div class="news-label h-100 d-flex justify-content-center align-items-center">
-                    <h3 class="text-dark">Featured in →</h3>
+                    <h3 class="text-white">Featured in →</h3>
                 </div>
             </div>
             <div class="col-md-9">
@@ -276,12 +277,19 @@
         </video>
         <div class="video-overlay"></div>
         <div class="video-content">
-            <h2>Master every<br>area of your life</h2>
+            <h2>Close the gap between where<br> you are today and where you want to be.</h2>
             <p>
-                Close the gap between where you are and where you want to be with
-                Rajeev Bhatt' scientifically proven system.
+                With Rajeev Bhatt’s experience-led, scientifically grounded approach, gain clarity, confidence, and
+                direction across learning, life skills, and personal growth.
             </p>
-            <button class="btn-start">Start now</button>
+            <ul>
+                <li>Build stronger foundations.</li>
+                <li> Create a future with purpose and independence.
+                </li>
+                <li> Unlock your true potential.
+                </li>
+            </ul>
+            <button class="btn-start">Start Your Journey</button>
         </div>
     </section>
 
@@ -292,15 +300,15 @@
 
 
         <div class="container">
-            <div class="row g-5   align-items-center">
+            <div class="row g-5   align-items-end">
                 <div class="  col-md-5">
 
-                    <h2 class="section-title text-dark">Understanding Autism In Detailed
+                    <h2 class="section-title text-dark">Autism Explained Simply
                     </h2>
                 </div>
                 <div class="col-md-7">
-                    <p class="text-black">Autism is a neurodevelopmental condition that affects communication, behavior,
-                        and social interaction. It exists on a spectrum, so each individual experiences it differently.
+                    <p class="text-black" style="font-style: italic;">Clear answers. Real facts. Practical guidance for
+                        parents and caregivers.
 
                     </p>
                 </div>
@@ -352,17 +360,15 @@
         <div class="container">
 
             <!-- Section Header -->
-            <div class="row g-5 py-5 align-items-center">
-                <div class="col-md-5">
-                    <h2 class="section-title">Understanding Autism In Detail</h2>
-                </div>
-                <div class="col-md-7">
-                    <p>
-                        Explore insightful articles focused on autism awareness, inclusive education,
-                        and practical guidance for parents and educators shaping a more understanding society.
-                    </p>
-                </div>
+
+            <div class="py-5 text-center">
+                <h2 class="section-title">Insights, Stories & Perspectives</h2>
+                <p>
+                    Explore insightful articles focused on autism awareness, inclusive education,<br>
+                    and practical guidance for parents and educators shaping a more understanding society.
+                </p>
             </div>
+
 
             <!-- Blog Cards -->
             <div class="row g-4">
@@ -446,10 +452,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-8">
-                        <h2 class="cta-title">Let’s Showcase Your Space the Right Way?</h2>
-                        <p class="cta-phone">Whether you're promoting a factory, a hotel, an office, or a product —
-                            Rajeev Bhatt delivers the visuals your audience will remember.
+                        <h2 class="cta-title">Let’s Create Impact the Right Way</h2>
+                        <p class="cta-phone">With decades of experience in inclusive education and neurodiversity,
+                            Rajeev Bhatt ensures your message reflects clarity, dignity, and purpose.
                         </p>
+
                     </div>
                     <div class="col-md-4 text-md-end text-center mt-3 mt-md-0">
                         <a href="contact.html" class="btn ">
@@ -470,12 +477,17 @@
                         <!-- Logo & Social -->
                         <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                             <div class="footer-logo">
-                                <div class="since-text text-white text-white">Rajeev Bhatt</div>
-
+                                <!-- <div class="since-text text-white text-white">Rajeev Bhatt</div> -->
+                                <img src="img/logo/logo1.png" alt="" class="">
                             </div>
                             <div class="social-links mt-4">
-                                <a target="_blank"
-                                    href="https://www.facebook.com/people/Dr-Rajeev-Bhatt/61576720773805/"
+
+                                <a target="_blank" href="https://www.instagram.com/_dr.rajeevbhatt/" class="social-icon"
+                                    title="instagram" aria-label="instagram">
+                                    <i class="bi bi-instagram"></i>
+                                </a>
+
+                                <a target="_blank" href="https://www.facebook.com/profile.php?id=61576720773805"
                                     class="social-icon" title="Facebook" aria-label="Facebook">
                                     <i class="bi bi-facebook"></i>
                                 </a>
@@ -486,11 +498,16 @@
                                     <i class="bi bi-linkedin"></i>
                                 </a>
 
-                                <a target="_blank" href="https://www.youtube.com/@Dr.RajeevBhatt" class="social-icon"
-                                    title="YouTube" aria-label="YouTube">
+                                <a target="_blank" href="https://youtu.be/B2dEIQLub0A?si=C48tpKTW2CLowzOO"
+                                    class="social-icon" title="YouTube" aria-label="YouTube">
                                     <i class="bi bi-youtube"></i>
                                 </a>
                             </div>
+
+                            Let’s stay connected. <br>
+                            Follow along on social media for thoughtful insights, real conversations, and ongoing work
+                            around inclusion, education, and neurodiversity.
+
 
 
                         </div>
@@ -516,6 +533,7 @@
                                 <a href="about.html" class="footer-link">About</a>
                                 <a href="media.html" class="footer-link">Media</a>
                                 <a href="blog.html" class="footer-link">Blog</a>
+                                <a href="gallery.html" class="footer-link">Gallery</a>
                                 <a href="contact.html" class="footer-link">Contacts</a>
                             </div>
                         </div>
@@ -528,16 +546,25 @@
                 <!-- Footer Bottom -->
                 <div class="footer-bottom">
                     <div class="row align-items-center">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
                             <p class="copyright">©Rajeev Bhatt 2025. All rights reserved.</p>
                         </div>
-                        <div class="col-md-6 text-center text-md-end">
+                        <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                            <a href="https://brandingwaale.com/" class="copyright"
+                                style="text-decoration: none;">Designed
+                                &amp; Developed by Brandingwaale
+                                Webtech</a>
+                        </div>
+                        <div class="col-md-4 text-center text-md-end">
                             <a href="#" class="footer-bottom-link">Terms of use</a>
                             <a href="#" class="footer-bottom-link">Privacy</a>
                             <a href="#" class="footer-bottom-link">Environmental Policy</a>
                         </div>
                     </div>
+
+
                 </div>
+
             </div>
         </footer>
     </div>
