--- a/practical-strategies-for-parents-from-rajeev-practical-strategies-for-parents-from-rajeev-bhatt.html
+++ b/practical-strategies-for-parents-from-rajeev-practical-strategies-for-parents-from-rajeev-bhatt.html
@@ -34,7 +34,7 @@
                         <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
