--- a/index.html
+++ b/index.html
@@ -300,18 +300,15 @@
 
 
         <div class="container">
-            <div class="row g-5   align-items-end">
-                <div class="  col-md-5">
+            <div class="text-center mb-5">
 
-                    <h2 class="section-title text-dark">Autism Explained Simply
-                    </h2>
-                </div>
-                <div class="col-md-7">
-                    <p class="text-black" style="font-style: italic;">Clear answers. Real facts. Practical guidance for
-                        parents and caregivers.
+                <h2 class="section-title text-dark">Autism Explained Simply
+                </h2>
 
-                    </p>
-                </div>
+                <p class="text-black">Clear answers. Real facts. Practical guidance for
+                    parents and caregivers.
+
+                </p>
             </div>
             <div class="swiper video-swiper">
                 <div class="swiper-wrapper">
